--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">InventoryPos</string>
     <string name="title_activity_inventory">Inventory</string>
+    <string name="title_activity_main">MainActivity</string>
 </resources>
